--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -7,7 +7,8 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link href="https://fonts.googleapis.com/css2?family=Syne:wght@700;800&family=Work+Sans&display=swap"
+	<link
+		href="https://fonts.googleapis.com/css2?family=Syne:wght@700;800&family=Work+Sans:wght@100;200;300;400&display=swap"
 		rel="stylesheet">
 	<meta name="description" content="">
 	<link rel="stylesheet" href="./assets/style.css">
@@ -15,12 +16,12 @@
 
 <body>
 	<header>
-		<h1>Sophie Bluel <span>Architecte d'intérieur</span></h1>
+		<h1>Sophie Bluel <span>ARCHITECTE D'INTÉRIEUR</span></h1>
 		<nav>
 			<ul>
-				<li>projets</li>
-				<li>contact</li>
-				<li>login</li>
+				<li><a class="active" href="./index.html">projets</a></li>
+				<li><a href="#">contact</a></li>
+				<li><a href="./login.html">login</a></li>
 				<li><img src="./assets/icons/instagram.png" alt="Instagram"></li>
 			</ul>
 		</nav>
@@ -42,7 +43,7 @@
 			</article>
 		</section>
 		<section id="portfolio">
-			<h2>Mes Projets</h2>
+			<h2>Mes projets</h2>
 			<nav class="filters">
 				<ul></ul>
 			</nav>
@@ -70,7 +71,7 @@
 			</ul>
 		</nav>
 	</footer>
-	<script src="./assets/script.js"></script>
+	<script src="./assets/index.js"></script>
 </body>
 
 </html>
