--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -43,7 +43,9 @@
 			</article>
 		</section>
 		<section id="portfolio">
-			<h2>Mes projets</h2>
+			<div class="portfolio-header">
+				<h2>Mes projets</h2>
+			</div>
 			<nav class="filters">
 				<ul></ul>
 			</nav>
@@ -71,7 +73,7 @@
 			</ul>
 		</nav>
 	</footer>
-	<script src="./assets/index.js"></script>
+	<script src="./assets/scripts/index.js"></script>
 </body>
 
 </html>
