--- a/FrontEnd/login.html
+++ b/FrontEnd/login.html
@@ -47,7 +47,7 @@
 			</ul>
 		</nav>
 	</footer>
-	<script src="./assets/login.js"></script>
+	<script src="./assets/scripts/login.js"></script>
 </body>
 
 </html>
