modale "gallery display/delete item"

--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -73,6 +73,8 @@
 			</ul>
 		</nav>
 	</footer>
+	<script src="./assets/scripts/modal.js"></script>
+
 	<script src="./assets/scripts/index.js"></script>
 </body>
 
