--- a/FrontEnd/login.html
+++ b/FrontEnd/login.html
@@ -6,6 +6,7 @@
 	<title>Sophie Bluel - Architecte d'intérieur</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="icon" type="image/png" href="./assets/icons/modify-icon.svg">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link
 		href="https://fonts.googleapis.com/css2?family=Syne:wght@700;800&family=Work+Sans:wght@100;200;300;400&display=swap"
